avances en recyclerviewAlumnos, falta que salgan el toolbar y el recyclerview

--- a/RecyclerViewAlumnos/app/src/main/res/values/strings.xml
+++ b/RecyclerViewAlumnos/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="ciclo">Ciclo</string>
     <string name="curso">Curso</string>
     <string name="id">Ids</string>
+    <string name="tvNombre"></string>
+    <string name="tvApellidos"></string>
+    <string name="tvCiclo"></string>
+    <string name="tvCurso"></string>
+
 </resources>
